<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="48sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/Title"
        />
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true">

    <Button
        android:id="@+id/HomePageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HomePage" />

    <Button
        android:id="@+id/PromotionsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Promotions"
        android:layout_below="@id/HomePageBtn"/>

    <Button
        android:id="@+id/EnterVoucherCodeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EnterVoucherCode"
        android:layout_below="@id/PromotionsBtn"/>

    <Button
        android:id="@+id/SettingsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Settings"
        android:layout_below="@id/EnterVoucherCodeBtn"/>


</RelativeLayout>

</RelativeLayout>