<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">



    <LinearLayout
        android:id="@+id/optionsButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
         />
            />

        <Button
            android:id="@+id/callBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/callBtn"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/editTexts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/optionsButtons"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/etStartPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/startPoint"
            android:inputType="text"
            android:textSize="48sp" />

        <EditText
            android:id="@+id/etTarget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/target"
            android:inputType="text"
            android:textSize="48sp"
             />
    </LinearLayout>

    <Button
        android:id="@+id/btnFindTaxi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnFindTaxi"
        android:layout_below="@id/editTexts"
        android:layout_centerHorizontal="true" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mapView"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/btnFindTaxi"
        android:layout_alignParentBottom="true"
         />


</RelativeLayout>
